@@ -1,3 +1,8 @@
+* Mon Jun 04 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.0-0
+- In support of DISA STIGs, added an option to monitor selinux
+  commands, (i.e., chcon, semanage, setfiles, setsebool), when
+  using the 'simp' audit profile.
+
 * Mon Mar 26 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.3-0
 - Work around RPM upgrade issue with nodeset link in compliance
   acceptance test suite.
